2003-02-05  Ulrich Drepper  <drepper@redhat.com>

	* libio/putwc_u.c: Use _IO_putwc_unlocked, not _IO_putc_unlocked.
	Patch by Moritz Schulte <moritz@duesseldorf.ccc.de>.

2003-02-05  Jim Meyering  <jim@meyering.net>

	Fix a heap-corrupting bug.
	* io/ftw.c: Include <limits.h>.
	(PATH_MAX) [!defined PATH_MAX]: Define to 1024.
	(process_entry): Allocate enough space to hold the resulting
	file name.  Don't presume that 2*dirbufsize is enough.
	(ftw_startup): Always use PATH_MAX to compute buffer size, now that
	it is guaranteed to be defined.

2003-02-04  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/Makefile: Add rules to build and run bug-iconv3.
	* iconvdata/bug-iconv3.c: New file.

2003-02-04  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* sysdeps/unix/sysv/linux/s390/system.c: New file.

2003-02-03  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/sparc/sparc32/elf/configure.in (BROKEN_SPARC_WDISP22): New
	check.
	* config.h.in (BROKEN_SPARC_WDISP22): Add.

2003-02-03  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/i686/memmove.S: New file.

2003-01-31  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/powerpc64/fe_nomask.c:
	Include kernel-features.h
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/getcontext.S: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/makecontext.S: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/setcontext.S: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/swapcontext.S: Likewise.

2003-02-02  Jakub Jelinek  <jakub@redhat.com>

	* elf/tls-macros.h [sparc] (TLS_LD, TLS_GD): Add "cc" clobbers.

2003-01-25  Jim Meyering  <jim@meyering.net>

	* io/ftw.c (object_compare): Compare inode numbers before device
	numbers, since the former are much more likely to differ.

2003-02-01  Ulrich Drepper  <drepper@redhat.com>

	* time/tzfile.c (__tzfile_compute): Change return value type to
	void.  Adjust return statements.
	* include/time.h (__tzfile_compute): Adjust prototype.
