@@ -1,1 +1,1 @@
-NPTL 0.19 by Ulrich Drepper
+NPTL 0.20 by Ulrich Drepper
