@@ -1,5 +1,13 @@
 2003-02-05  Ulrich Drepper  <drepper@redhat.com>
 
+	* sysdeps/unix/sysv/linux/posix_fadvise.c: New file.
+	* sysdeps/unix/sysv/linux/syscalls.list: Add posix_fadvise64 syscall.
+	* sysdeps/unix/sysv/linux/alpha/syscalls.list: Likewise.
+	* sysdeps/unix/sysv/linux/ia64/syscalls.list: Likewise.
+	* sysdeps/unix/sysv/linux/powerpc/powerpc64/syscalls.list: Likewise.
+	* sysdeps/unix/sysv/linux/s390/s390-64/syscalls.list: Likewise.
+	* sysdeps/unix/sysv/linux/sparc/sparc64/syscalls.list: Likewise.
+
 	* libio/putwc_u.c: Use _IO_putwc_unlocked, not _IO_putc_unlocked.
 	Patch by Moritz Schulte <moritz@duesseldorf.ccc.de>.
 
